index.html movido
Para funcionar no GitHub Pages

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="../homepage/index.html"> <i class="fas fa-carrot"></i> FreshFarm</a>
+                <a class="navbar-brand" href="freshfarm/homepage/index.html"> <i class="fas fa-carrot"></i> FreshFarm</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="../homepage/index.html"><i class="fas fa-home"></i> Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="freshfarm/homepage/index.html"><i class="fas fa-home"></i> Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!"> <i class="fa fa-address-book" aria-hidden="true"></i> Contactos</a></li>                    
                     </ul>
                     <div class="d-flex">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                            <li class="nav-item border-end"><a class="nav-link" href="loginPrompt.html"> <i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
+                            <li class="nav-item border-end"><a class="nav-link" href="freshfarm/homepage/loginPrompt.html"> <i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
                             <li class="nav-item"><a class="nav-link" href="#!"> <i class="fa fa-plus" aria-hidden="true"></i>Criar conta</a></li>
                         </ul>                    
                         <button class="btn btn-outline-light" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
@@ -153,7 +153,7 @@
                                 
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="../shop-item/batatas.html">Ver mais</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="freshfarm/shop-item/batatas.html">Ver mais</a></div>
                             </div>
                             <div class="card-footer p-4 pt-0 bg-transparent">
                                 <div class="text-center">
@@ -182,7 +182,7 @@
                                     <input type="number" min="0" max="150" size="1" class="INPUTNUM" value="0"></div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="../shop-item/couve.html">Ver mais</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="freshfarm/shop-item/couve.html">Ver mais</a></div>
                             </div>
                             <div class="card-footer p-4 pt-0 bg-transparent">
                                 <div class="text-center">
@@ -210,7 +210,7 @@
                                     <input type="number" min="0" max="150" size="1" class="INPUTNUM" value="0"></div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="../shop-item/maçãs.html">Ver mais</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="freshfarm/shop-item/maçãs.html">Ver mais</a></div>
                             </div>
                             <div class="card-footer p-4 pt-0 bg-transparent">
                                 <div class="text-center">
@@ -239,7 +239,7 @@
                                     <input type="number" min="0" max="150" size="1" class="INPUTNUM"value="0"></div>
                             </div>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="../shop-item/cenoura.html">Ver mais</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="freshfarm/shop-item/cenoura.html">Ver mais</a></div>
                             </div>
                             <div class="card-footer p-4 pt-0 bg-transparent">
                                 <div class="text-center">
@@ -296,7 +296,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-          <a id="FINA" href="loginPrompt.html"><button type="button" disabled class="btn btn-primary rounded-pill text-white">Finalizar Compras</button></a>
+          <a id="FINA" href="freshfarm/loginPrompt.html"><button type="button" disabled class="btn btn-primary rounded-pill text-white">Finalizar Compras</button></a>
         </div>
       </div>
     </div>
