--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </ul>
                     <div class="d-flex">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                            <li class="nav-item border-end"><a class="nav-link" href="freshfarm/homepage/loginPrompt.html"> <i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
+                            <li class="nav-item border-end"><a id="LOGIN"class="nav-link" href="freshfarm/homepage/loginPrompt.html"> <i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
                             <li class="nav-item"><a class="nav-link" href="#!"> <i class="fa fa-plus" aria-hidden="true"></i>Criar conta</a></li>
                         </ul>                    
                         <button class="btn btn-outline-light" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
